<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>fr.codevallee</groupId>
    <artifactId>langagelinotte</artifactId>
    <packaging>pom</packaging>
    <!--version>3.0</version-->
    <!--version>3.0-QUASI-STABLE</version-->
    <!--version>3.1-NON-STABLE</version-->
    <version>3.7</version>

    <modules>
        <module>linotte-alize</module>
        <module>linotte-moteur</module>
        <module>linotte-lanceur</module>
        <module>linotte-ext</module>
        <module>linotte-dist</module>
        <module>linotte-resources</module>
        <module>linotte-greffons</module>
        <module>linotte-accessibilite</module>
    </modules>

    <name>linotte</name>
    <url>http://www.codevallee.fr</url>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub OWNER Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/cpc6128/LangageLinotte</url>
        </repository>
    </distributionManagement>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <timestamp>${maven.build.timestamp}</timestamp>
        <maven.build.timestamp.format>yyyy-MM-dd-HH-mm</maven.build.timestamp.format>
    </properties>

    <profiles>
        <profile>
            <id>java9</id>
            <!--activation>
                <jdk>[9,]</jdk>
            </activation-->
            <properties>
                <maven.compiler.source>9</maven.compiler.source>
                <maven.compiler.target>9</maven.compiler.target>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.8.1</version>
                        <configuration>
                            <compilerArgs>
                                <arg>--add-exports</arg>
                                <arg>java.desktop/sun.swing=ALL-UNNAMED</arg>
                            </compilerArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
